@@ -3,7 +3,7 @@
         {
             "label": "Inject",
             "window_name": "UE4-DDS-Tools (Inject mode)",
-            "command": ["python\\python.exe src\\main.py \"", "\" \"", "\" --save_folder=\"", "\" --version="],
+            "command": ["python\\python.exe src\\main.py \"", "\" \"", "\" --save_folder=\"", "\" --version=", " "],
             "button": "Inject",
             "components": [
                 {
@@ -26,13 +26,18 @@
                     "items": ["4.26 ~ 4.27", "4.23 ~ 4.25", "4.20 ~ 4.22", "4.16 ~ 4.19", "4.15", "ff7r"],
                     "values": ["4.26", "4.23", "4.20", "4.16", "4.15", "ff7r"],
                     "default": 5
+                },
+                {
+                    "type": "check",
+                    "label": "no mipmaps",
+                    "value": "--no_mipmaps"
                 }
             ]
         },
         {
             "label": "Export",
             "window_name": "UE4-DDS-Tools (Export mode)",
-            "command": ["python\\python.exe src\\main.py \"", "\" --mode=export --save_folder=\"", "\" --version=", " --export_as="],
+            "command": ["python\\python.exe src\\main.py \"", "\" --mode=export --save_folder=\"", "\" --version=", " --export_as=", " "],
             "button": "Export",
             "components": [
                 {
@@ -57,6 +62,11 @@
                     "items": [".tga or .hdr", ".dds", ".png", ".jpg", ".bmp"],
                     "values": ["tga", "dds", "png", "jpg", "bmp"],
                     "default": 0
+                },
+                {
+                    "type": "check",
+                    "label": "no mipmaps",
+                    "value": "--no_mipmaps"
                 }
             ]
         },
